--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -6,8 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="#FECE00"
-    android:gravity="center"
-    tools:context=".MainActivity">
+    android:gravity="center">
 
     <ImageView
         android:layout_width="250dp"
