--- a/app/src/main/res/layout/otp_activity.xml
+++ b/app/src/main/res/layout/otp_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFEB3B"
+    android:background="#FECE00"
     android:orientation="vertical"
     android:gravity="center"
     android:padding="20dp">
