--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFEB3B"
+    android:background="#FECE00"
     android:orientation="vertical"
     android:gravity="center"
     android:padding="20dp">
@@ -51,7 +51,7 @@
     </RelativeLayout>
 
     <Button
-        android:id="@+id/user_log_in"
+        android:id="@+id/sign_up_reg"
         android:layout_width="240dp"
         android:layout_height="75dp"
         android:layout_margin="15dp"
