--- a/app/src/main/res/layout/activity_input_screen.xml
+++ b/app/src/main/res/layout/activity_input_screen.xml
@@ -14,7 +14,7 @@
             android:id="@+id/imageView"
             android:layout_width="250dp"
             android:layout_height="250dp"
-            app:srcCompat="@drawable/iconppeep2" />
+            app:srcCompat="@drawable/ppeeplogo3" />
 
 
         <LinearLayout
