--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,7 +12,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_marginBottom="10dp"
-        android:src="@drawable/logo" />
+        android:src="@drawable/ppeeplogo3" />
 
 
 
