--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -12,13 +12,13 @@
     <ImageView
         android:layout_width="220dp"
         android:layout_height="220dp"
-        android:layout_marginBottom="20dp"
+        android:layout_marginBottom="30dp"
         android:src="@drawable/ppeeplogo3" />
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_margin="10dp"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
 
         android:paddingTop="10dp"
         android:paddingBottom="20dp"
@@ -53,7 +53,7 @@
     <Button
         android:id="@+id/sign_up_reg"
         android:layout_width="240dp"
-        android:layout_height="75dp"
+        android:layout_height="65dp"
         android:layout_margin="15dp"
         android:background="@drawable/rounded_shape"
 
@@ -63,19 +63,35 @@
         android:textSize="25sp"
 
         />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center"
+    android:paddingTop="20dp">
 
     <TextView
-        android:text="Have an Account? Sign In Here"
+        android:text="Have an Account?"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button1"
+
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="29dp"
-        android:id="@+id/textView"
+   android:paddingRight="10dp"
         android:gravity="center"
         android:textColor="#352B2B"
         android:textSize="20dp"
         android:textStyle="bold"/>
+    <TextView
+      android:text="@string/log_in_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/logInHere"
+        android:textColor="#352B2B"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+
+</LinearLayout>
+
 
 
 
