--- a/app/src/main/res/layout/activity_otppage.xml
+++ b/app/src/main/res/layout/activity_otppage.xml
@@ -14,21 +14,24 @@
         android:id="@+id/layout_header"
         android:layout_width="match_parent"
         android:layout_height="44sp"
-        android:background="#BBD80E0E">
+  >
 
         <TextView
             android:layout_width="match_parent"
             android:layout_height="44sp"
             android:gravity="center"
             android:text="Enter One Time Password"
-            android:textColor="@color/white"
-            android:textSize="20sp" />
+            android:textColor="#0E0C0C"
+            android:textStyle="bold"
+            android:textSize="30sp" />
 
     </LinearLayout>
     <LinearLayout
         android:id="@+id/layout_otp"
         android:layout_width="match_parent"
         android:layout_height="90dp"
+  android:gravity="center"
+        android:paddingTop="20dp"
         android:layout_below="@+id/layout_header"
         android:orientation="horizontal">
 
@@ -38,6 +41,7 @@
             android:layout_height="42dp"
             android:inputType="numberPassword"
             android:maxLength="1"
+
             android:nextFocusRight="@+id/editText_two">
 
             <requestFocus />
@@ -96,9 +100,11 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="42sp"
+        android:layout_height="65sp"
  android:id="@+id/submit_button"
-        android:text="SUBMIT" />
+        android:text="SUBMIT"
+        android:textSize="20sp"
+        android:background="@drawable/button_shadow"/>
 
 
 </LinearLayout>
