--- a/app/src/main/res/drawable/rounded_shape.xml
+++ b/app/src/main/res/drawable/rounded_shape.xml
@@ -30,7 +30,7 @@
 
             <gradient
                 android:startColor="#FAFAF9"
-                android:endColor="#FFEB3B"
+                android:endColor="#E6FDFDFC"
                 android:angle="270"
                 />
             <corners
@@ -39,7 +39,7 @@
 
             <stroke
                 android:width="1dp"
-                android:color="#FFEB3B">
+                android:color="#DAD8CE">
             </stroke>
 
             <padding
