--- a/app/src/main/res/drawable/button_shadow.xml
+++ b/app/src/main/res/drawable/button_shadow.xml
@@ -30,7 +30,7 @@
 
     <gradient
         android:startColor="#FAFAF9"
-        android:endColor="#FFEB3B"
+        android:endColor="#EBEAE1"
         android:angle="270"
         />
     <corners
@@ -39,7 +39,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#FFEB3B">
+        android:color="#E7E6DC">
     </stroke>
 
     <padding
