--- a/app/src/main/res/drawable/shape_phone_number.xml
+++ b/app/src/main/res/drawable/shape_phone_number.xml
@@ -6,7 +6,7 @@
 
     <gradient
         android:startColor="#FAFAF9"
-        android:endColor="#FFEB3B"
+        android:endColor="#E6E4DA"
         android:angle="180"
         />
     <corners
@@ -15,7 +15,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="#FFEB3B">
+        android:color="#EBEBD7">
     </stroke>
 
     <padding
