--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -1,28 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+
+<android.support.v4.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/drawerId"
+    tools:openDrawer="start"
+ >
+
+
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:id="@+id/NavigationId"
+        android:background="#ffffffff"
+        app:menu="@menu/drawermenu"
+        android:layout_gravity="start"
+        app:headerLayout="@layout/header"
+        >
+
+
+    </android.support.design.widget.NavigationView>
+
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/drawerId"
-        tools:openDrawer="start"
-        tools:context=".HomePage">
+        tools:context=".MainActivity"
+        android:orientation="vertical">
 
+        <android.support.design.widget.TabLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#F0EFEB"
+            app:tabMode="fixed"
+            app:tabGravity="fill"
+            app:tabIndicatorColor="#F50303"
+            android:id="@+id/tabLayoutId"
 
+            android:layout_centerInParent="true"
 
+            app:tabIndicatorHeight="0dp"
+            app:tabPaddingBottom="-1dp"
+            app:tabPaddingEnd="-1dp"
+            app:tabPaddingStart="-1dp"
+            app:tabPaddingTop="-1dp"
 
-        <android.support.design.widget.NavigationView
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:id="@+id/NavigationId"
-            android:background="#ffffffff"
-            app:menu="@menu/drawermenu"
-            android:layout_gravity="start"
-            app:headerLayout="@layout/header"
             >
 
+        </android.support.design.widget.TabLayout>
 
-        </android.support.design.widget.NavigationView>
 
-    </android.support.v4.widget.DrawerLayout>
+        <android.support.v4.view.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/viewPagerId"
+            >
+
+        </android.support.v4.view.ViewPager>
+
+    </LinearLayout>
+
+</android.support.v4.widget.DrawerLayout>
