--- a/app/src/main/res/layout/activity_food_app.xml
+++ b/app/src/main/res/layout/activity_food_app.xml
@@ -5,9 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+
     tools:context=".FoodApp">
 
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:layout_margin="3dp">
 
     <android.support.v7.widget.Toolbar
         android:layout_width="match_parent"
@@ -39,14 +44,14 @@
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:columnCount="2"
-        android:rowCount="2"
+        android:layout_height="259dp"
         android:layout_marginTop="8dp"
-        android:alignmentMode="alignMargins"
-        android:columnOrderPreserved="false"
         android:layout_weight="2"
-        android:padding="8dp">
+        android:alignmentMode="alignMargins"
+        android:columnCount="2"
+        android:columnOrderPreserved="true"
+        android:padding="8dp"
+        android:rowCount="2">
 
 
         <android.support.v7.widget.CardView
@@ -56,7 +61,7 @@
             android:layout_columnWeight="1"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            android:layout_marginBottom="0dp"
+            android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
             app:cardElevation="2dp">
 
@@ -71,7 +76,7 @@
                     android:layout_height="50dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
-android:layout_marginRight="10dp"
+                    android:layout_marginRight="10dp"
                     android:src="@drawable/burgericon" />
 
                 <TextView
@@ -87,30 +92,30 @@ android:layout_marginRight="10dp"
 
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:layout_marginBottom="16dp"
+            android:layout_columnWeight="1"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            app:cardElevation="8dp"
+            android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
-            >
+            app:cardElevation="8dp">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_gravity="center_horizontal"
-                >
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
-android:layout_marginRight="10dp"
+                    android:layout_marginRight="10dp"
                     android:src="@drawable/pizzaicon" />
 
                 <TextView
@@ -124,88 +129,82 @@ android:layout_marginRight="10dp"
                     android:textStyle="bold" />
 
 
-
-
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:layout_marginBottom="16dp"
+            android:layout_columnWeight="1"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            app:cardElevation="8dp"
+            android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
-            >
+            app:cardElevation="8dp">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_gravity="center_horizontal"
-                >
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/biriyaniicon"
-android:layout_marginRight="10dp"
-                    android:layout_marginTop="16dp"/>
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/biriyaniicon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="Biriyani"
                     android:textAlignment="center"
-                    android:layout_gravity="center"
                     android:textColor="#000"
                     android:textSize="20sp"
                     android:textStyle="bold" />
 
 
-
-
             </LinearLayout>
         </android.support.v7.widget.CardView>
+
         <android.support.v7.widget.CardView
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_columnWeight="1"
             android:layout_rowWeight="1"
-            android:layout_marginBottom="16dp"
+            android:layout_columnWeight="1"
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
-            app:cardElevation="8dp"
+            android:layout_marginBottom="16dp"
             app:cardCornerRadius="8dp"
-            >
+            app:cardElevation="8dp">
+
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal"
                 android:layout_gravity="center_horizontal"
-                >
+                android:orientation="horizontal">
 
                 <ImageView
                     android:layout_width="50dp"
                     android:layout_height="50dp"
                     android:layout_gravity="center_horizontal"
-                    android:src="@drawable/beverageicon"
-android:layout_marginRight="10dp"
-                    android:layout_marginTop="16dp"/>
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/beverageicon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:text="Beverage"
                     android:textAlignment="center"
-                    android:layout_gravity="center"
                     android:textColor="#000"
                     android:textSize="20sp"
                     android:textStyle="bold" />
-
-
 
 
             </LinearLayout>
@@ -245,5 +244,7 @@ android:layout_marginRight="10dp"
 
 
 
+
+</LinearLayout>
 
 </LinearLayout>
