--- a/app/src/main/res/layout/activity_tab_fragment_recommended.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_recommended.xml
@@ -5,90 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    tools:context=".TabFragmentRecommended">
 
-    tools:context=".FoodApp">
-
-
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        app:title="PPEEP FOOD"
-        android:gravity="center"
-        android:theme="@style/AppTheme2"
-        android:id="@+id/foodtoolbar"
-        android:background="#ffcc00"
-
-        ></android.support.v7.widget.Toolbar>
-
-
-    <SearchView
-        android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:queryHint="Search Here"
-        android:iconifiedByDefault="false"
-        android:layout_marginLeft="15sp"
-        >
-
-    </SearchView>
-<!--<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:layout_margin="3dp">
-
-    <android.support.v7.widget.Toolbar
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        app:title="PPEEP FOOD"
-        android:gravity="center"
-        android:theme="@style/AppTheme2"
-        android:id="@+id/foodtoolbar"
-        android:background="#ffcc00"
-
-        ></android.support.v7.widget.Toolbar>
-
-
-    <SearchView
-        android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:queryHint="Search Here"
-        android:iconifiedByDefault="false"
-        android:layout_marginLeft="15sp"
-        >
-
-    </SearchView>
-
-    <android.support.design.widget.TabLayout
-        android:id="@+id/tabs"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:tabGravity="fill"
-        app:tabMode="fixed">
-
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:icon="@drawable/recommendedicon2"
-            android:text="Recommended"
-            />
-
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:icon="@drawable/nearbyicon" />
-
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:icon="@drawable/recommendedicon" />
-
-        <android.support.design.widget.TabItem
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:icon="@drawable/offericon" />
-
-
-    </android.support.design.widget.TabLayout>
 
     <com.smarteist.autoimageslider.SliderLayout
         android:layout_width="match_parent"
@@ -96,7 +14,7 @@
         android:layout_marginBottom="10dp"
         android:id="@+id/FoodAppimageSlider"/>
 
- <GridLayout
+    <GridLayout
         android:layout_width="match_parent"
         android:layout_height="259dp"
         android:layout_marginTop="8dp"
@@ -131,13 +49,13 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/burgericon" />
+                    android:src="@drawable/biriyaniicon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Burger"
+                    android:text="Bangla"
                     android:textAlignment="center"
                     android:textColor="#000"
                     android:textSize="20sp"
@@ -170,13 +88,13 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="20dp"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/pizzaicon" />
+                    android:src="@drawable/chinesefoodicon2" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Pizza"
+                    android:text="Chinese"
                     android:textAlignment="center"
                     android:textColor="#000"
                     android:textSize="20sp"
@@ -209,13 +127,13 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/biriyaniicon" />
+                    android:src="@drawable/fastfoodicon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Biriyani"
+                    android:text="Fastfood"
                     android:textAlignment="center"
                     android:textColor="#000"
                     android:textSize="20sp"
@@ -248,13 +166,13 @@
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="10dp"
-                    android:src="@drawable/beverageicon" />
+                    android:src="@drawable/bakeryicon" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:text="Beverage"
+                    android:text="Bakery"
                     android:textAlignment="center"
                     android:textColor="#000"
                     android:textSize="20sp"
@@ -267,36 +185,36 @@
 
 
 
-<LinearLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Recommended for you"
+        android:orientation="horizontal">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Recommended for you"
 
-        android:textSize="16sp"
+            android:textSize="16sp"
 
-        />
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        >
-
+            />
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
-            <TextView
+            android:layout_height="wrap_content"
+            >
+
+            <RelativeLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="View All"
-                android:textSize="10sp"
-                android:layout_marginRight="10dp"
-                android:layout_alignParentRight="true"
-                android:textColor="#A80404"/>
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="View All"
+                    android:textSize="10sp"
+                    android:layout_marginRight="10dp"
+                    android:layout_alignParentRight="true"
+                    android:textColor="#A80404"/>
+            </RelativeLayout>
         </RelativeLayout>
-    </RelativeLayout>
 
 
 
@@ -310,17 +228,17 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
 
-            <ImageView
-                android:layout_width="200dp"
-                android:layout_height="100dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginRight="10dp"
-                android:src="@drawable/burgericon"
-                />
+                <ImageView
+                    android:layout_width="200dp"
+                    android:layout_height="150dp"
+                    android:layout_marginTop="16dp"
+                    android:layout_marginRight="10dp"
+                    android:src="@drawable/burgericon"
+                    />
             </LinearLayout>
             <FrameLayout
                 android:layout_width="wrap_content"
@@ -329,7 +247,7 @@
 
                 <ImageView
                     android:layout_width="200dp"
-                    android:layout_height="100dp"
+                    android:layout_height="150dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="10dp"
                     android:src="@drawable/burgericon"
@@ -342,7 +260,7 @@
 
                 <ImageView
                     android:layout_width="200dp"
-                    android:layout_height="100dp"
+                    android:layout_height="150dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginRight="10dp"
                     android:src="@drawable/burgericon"
@@ -355,77 +273,5 @@
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-</LinearLayout>-->
-
-
-
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        tools:context=".MainActivity"
-        android:orientation="vertical">
-
-        <android.support.design.widget.TabLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#F0EFEB"
-            app:tabMode="fixed"
-            app:tabGravity="fill"
-            app:tabIndicatorColor="#F50303"
-            android:id="@+id/tabLayoutId"
-            app:tabIndicatorHeight="0dp"
-            app:tabTextAppearance="@style/MyTabLayoutTextAppearance"
-            app:tabPaddingBottom="-1dp"
-            android:layout_margin="2dp"
-            app:tabPaddingEnd="-1dp"
-            app:tabPaddingStart="-1dp"
-            app:tabPaddingTop="-1dp"
-
-            >
-
-        </android.support.design.widget.TabLayout>
-
-
-        <android.support.v4.view.ViewPager
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/viewPagerId"
-            >
-
-        </android.support.v4.view.ViewPager>
-
-    </LinearLayout>
 
 </LinearLayout>
